--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -851,11 +851,23 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'low_risk': 51352, 'high_risk': 51352})"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Resample the training data with SMOTE\n",
     "from imblearn.over_sampling import SMOTE\n",
-    "X_resampled2, y_resampled2 = SMOTE(random_state=1,sampling_strategy='auto').fit_resample(X_train, y_train)"
+    "X_resampled2, y_resampled2 = SMOTE(random_state=1,sampling_strategy='auto').fit_resample(X_train, y_train)\n",
+    "Counter(y_resampled2)"
    ]
   },
   {
@@ -876,8 +888,9 @@
    ],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
-    "model2 = LogisticRegression(solver='lbfgs', random_state=1)\n",
-    "model2.fit(X_resampled2, y_resampled2)"
+    "smt = LogisticRegression(solver='lbfgs', random_state=1)\n",
+    "smt_fit = smt.fit(X_resampled2, y_resampled2)\n",
+    "smt_fit"
    ]
   },
   {
@@ -898,7 +911,7 @@
    ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "y_pred2 = model2.predict(X_test)\n",
+    "y_pred2 = smt_fit.predict(X_test)\n",
     "balanced_accuracy_score(y_test, y_pred2)\n"
    ]
   },
@@ -1020,7 +1033,7 @@
     {
      "data": {
       "text/plain": [
-       "0.5293026900499977"
+       "0.5102725100821478"
       ]
      },
      "execution_count": 21,
@@ -1042,8 +1055,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[  53,   34],\n",
-       "       [9425, 7693]])"
+       "array([[  51,   36],\n",
+       "       [9683, 7435]])"
       ]
      },
      "execution_count": 22,
@@ -1067,10 +1080,10 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.01      0.61      0.45      0.01      0.52      0.28        87\n",
-      "   low_risk       1.00      0.45      0.61      0.62      0.52      0.27     17118\n",
+      "  high_risk       0.01      0.59      0.43      0.01      0.50      0.26        87\n",
+      "   low_risk       1.00      0.43      0.59      0.60      0.50      0.25     17118\n",
       "\n",
-      "avg / total       0.99      0.45      0.61      0.62      0.52      0.27     17205\n",
+      "avg / total       0.99      0.44      0.59      0.60      0.50      0.25     17205\n",
       "\n"
      ]
     }
@@ -1099,20 +1112,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Counter({'high_risk': 68458, 'low_risk': 62022})"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Resample the training data with SMOTEENN\n",
     "# Warning: This is a large dataset, and this step may take some time to complete\n",
@@ -1125,20 +1127,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LogisticRegression(random_state=1)"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
     "model4 = LogisticRegression(solver='lbfgs', random_state=1)\n",
@@ -1147,20 +1138,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.6407451724540814"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Calculated the balanced accuracy score\n",
     "y_pred4 = model4.predict(X_test)\n",
@@ -1169,21 +1149,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[  64,   23],\n",
-       "       [7774, 9344]])"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Display the confusion matrix\n",
     "confusion_matrix(y_test, y_pred4)"
@@ -1191,23 +1159,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                   pre       rec       spe        f1       geo       iba       sup\n",
-      "\n",
-      "  high_risk       0.01      0.74      0.55      0.02      0.63      0.41        87\n",
-      "   low_risk       1.00      0.55      0.74      0.71      0.63      0.39     17118\n",
-      "\n",
-      "avg / total       0.99      0.55      0.73      0.70      0.63      0.39     17205\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Print the imbalanced classification report\n",
     "print(classification_report_imbalanced(y_test, y_pred4))"
