--- a/credit_risk_ensemble.ipynb
+++ b/credit_risk_ensemble.ipynb
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
        "[8 rows x 95 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +682,7 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +737,7 @@
        "BalancedRandomForestClassifier(random_state=1)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +763,7 @@
        "0.7885466545953005"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -786,7 +786,7 @@
        "       [ 2153, 14951]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -798,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -928,7 +928,7 @@
        "[95 rows x 2 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -951,16 +951,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "BalancedRandomForestClassifier(random_state=1)"
+       "EasyEnsembleClassifier(n_estimators=100, random_state=1)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -968,57 +968,58 @@
    "source": [
     "# Train the EasyEnsembleClassifier\n",
     "from imblearn.ensemble import EasyEnsembleClassifier\n",
-    "EasyEnsembleClassifier(n_estimators=100, random_state=1)\n",
-    "model.fit(X_train,y_train)"
+    "eec = EasyEnsembleClassifier(n_estimators=100, random_state=1)\n",
+    "eec_fit = eec.fit(X_train,y_train)\n",
+    "eec_fit"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7885466545953005"
+       "0.9316600714093861"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "y_pred = model.predict(X_test)\n",
-    "balanced_accuracy_score(y_test,y_pred)"
+    "y_pred6 = eec_fit.predict(X_test)\n",
+    "balanced_accuracy_score(y_test,y_pred6)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[   71,    30],\n",
-       "       [ 2153, 14951]])"
+       "array([[   93,     8],\n",
+       "       [  983, 16121]])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Display the confusion matrix\n",
-    "confusion_matrix(y_test,y_pred)"
+    "confusion_matrix(y_test,y_pred6)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1027,17 +1028,17 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.03      0.70      0.87      0.06      0.78      0.60       101\n",
-      "   low_risk       1.00      0.87      0.70      0.93      0.78      0.62     17104\n",
+      "  high_risk       0.09      0.92      0.94      0.16      0.93      0.87       101\n",
+      "   low_risk       1.00      0.94      0.92      0.97      0.93      0.87     17104\n",
       "\n",
-      "avg / total       0.99      0.87      0.70      0.93      0.78      0.62     17205\n",
+      "avg / total       0.99      0.94      0.92      0.97      0.93      0.87     17205\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "print(classification_report_imbalanced(y_test,y_pred))"
+    "print(classification_report_imbalanced(y_test,y_pred6))"
    ]
   },
   {
